Removing timer component

--- a/AgileTeamTools.Blazor.Ui/wwwroot/index.html
+++ b/AgileTeamTools.Blazor.Ui/wwwroot/index.html
@@ -30,7 +30,7 @@
                 <div class="col-lg-12">
                     <div class="jumbotron jumbotron-fluid">
                         <div class="container">
-                            <h1 class="display-4">Starting Agile Team Tools<span class="blink">...</span></h1>
+                            <h1 class="display-4">Starting Agile Team Tools</h1>
                             <p class="lead">Keeping things nimble<span class="blink">...</span></p>
                         </div>
                     </div>
